--- a/template.yaml
+++ b/template.yaml
@@ -3,9 +3,26 @@ Resources:
     Type: AWS::EC2::VPC
     Properties:
       CidrBlock: 10.16.0.0/16
-      EnableDnsHostnames: TRUE
+      EnableDnsHostnames: true
       EnableDnsSupport: true
       Tags:
         - Key: Name
           Value: TEST
-          
+  Subnet:
+    Type: AWS::EC2::Subnet
+    Properties:
+      Type: AWS::EC2::Subnet
+      Properties:
+        AvailabilityZone: ap-northeast-1a
+        CidrBlock: 10.16.0.0/24
+        Tags:
+          - key:Name
+          - Value:TESTSUBNET
+        VpcId: !Ref VPC
+Metadata:
+  AWS::Composer::Groups:
+    Group:
+      Label: GroupA
+      Members:
+        - Subnet
+        - VPC
